Concluded Project 5.1 version 1

--- a/pages/index.css
+++ b/pages/index.css
@@ -5,3 +5,7 @@
 @import url(../blocks/lead.css);
 @import url(../blocks/intro.css);
 @import url(../blocks/footer.css);
+
+.content {
+  margin: 0 auto;
+}
