--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,14 +1,30 @@
 .header {
-  margin: 0;
+  margin: 0 auto;
   width: 100%;
   color: #fff;
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-top: 34px;
 }
 .header__logo {
   width: 254px;
   height: 70px;
-  padding-top: 34px;
 }
-
+@media screen and (max-width: 768px) {
+  .header {
+    padding-top: 30px;
+  }
+  .header__logo {
+    height: 66px;
+  }
+}
+@media screen and (max-width: 320px) {
+  .header {
+    padding-top: 20px;
+  }
+  .header__logo {
+    width: 188px;
+    height: 52px;
+  }
+}
