--- a/blocks/intro.css
+++ b/blocks/intro.css
@@ -1,41 +1,96 @@
-.intro{
-    padding: 92px 302px 0 148px;
+.intro {
+  padding-top: 92px;
+  width: 64.84%;
+  margin: 0 auto;
+  padding-right: 12.03%;
+}
+.intro__title {
+  margin: 0;
+  font-weight: 900;
+  font-size: 54px;
+  line-height: 58px;
+}
+.intro__quote {
+  margin: 0;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 34px;
+  width: 88.92%;
+  margin-top: 40px;
+}
+.intro__author {
+  margin: 0;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 34px;
+  width: 88.19%;
+  text-align: end;
+  margin-top: 10px;
+}
+.intro__text {
+  margin: 0;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26.08px;
+  width: 86.99%;
+  margin-top: 32px;
+}
 
-}
-.intro__title{
-    width: 830px;
-    height: 116px;
-    font-size: 54px;
-    font-weight: 900;
-    line-height: 58px;
-    margin: 0;
-
-}
-.intro__quote{
-    width: 738px;
-    height: 68px;
+/* Substituindo as widths que sáo maiores que 768 por porcentagens parecem estar resolvendo a responsividade */
+@media screen and (max-width: 784px) {
+  .intro {
+    padding: 0;
+    padding-top: 90px;
+    margin: 0 auto;
+    width: 93.75%;
+  }
+  .intro__title {
+    width: 98.19%;
+    font-size: 45px;
+    line-height: 49px;
+  }
+  .intro__quote {
+    width: 100%;
     font-size: 24px;
-    font-weight: 400;
     line-height: 34px;
-    margin: 0;
-    margin-top: 40px;
-    
-}
-.intro__author{
+  }
+  .intro__author {
+    width: 100%;
     font-size: 24px;
-    font-weight: 400;
     line-height: 34px;
-    text-align: right;
-    margin: 0;
-    margin-top: 10px;
-    width: 732px;
-}
-.intro__text{
-    width: 722px;
-    height: 182px;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 26.08px;
-    margin: 0;
+  }
+  .intro__text {
     margin-top: 32px;
+    width: 100%;
+    font-size: 16px;
+    line-height: 26.08px;
+  }
+}
+@media screen and (max-width: 320px) {
+  .intro {
+    padding: 0;
+    padding-top: 64px;
+    margin: 0 auto;
+    width: 90%;
+  }
+  .intro__title {
+    width: 100%;
+    font-size: 32px;
+    line-height: 35px;
+  }
+  .intro__quote {
+    width: 100%;
+    font-size: 24px;
+    line-height: 30px;
+  }
+  .intro__author {
+    width: 100%;
+    font-size: 24px;
+    line-height: 34px;
+  }
+  .intro__text {
+    width: 100%;
+    font-size: 16px;
+    line-height: 26.08px;
+  }
 }
