--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,9 +1,12 @@
 .page {
   margin: 0 auto;
+  min-width: 320px;
+  max-width: 1280px;
   padding: 0;
   font-family: "Inter", sans-serif;
-  min-width: 1100px;
-  max-width: 1600px;
   background-color: #2a2c2f;
   color: #fff;
+}
+
+@media screen and (max-width: 768px) {
 }
