--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,3 +1,9 @@
+body,
+html {
+  background-color: #2a2c2f;
+  margin: 0;
+}
+
 .page {
   margin: 0 auto;
   min-width: 320px;
@@ -6,7 +12,4 @@
   font-family: "Inter", sans-serif;
   background-color: #2a2c2f;
   color: #fff;
-}
-
-@media screen and (max-width: 768px) {
 }
