--- a/pages/index.css
+++ b/pages/index.css
@@ -4,4 +4,5 @@
 @import url(../vendor/fonts.css);
 @import url(../blocks/lead.css);
 @import url(../blocks/intro.css);
+@import url(../blocks/photo-grid.css);
 @import url(../blocks/footer.css);
