--- a/blocks/page.css
+++ b/blocks/page.css
@@ -9,7 +9,7 @@ html {
   min-width: 320px;
   max-width: 1280px;
   padding: 0;
-  font-family: "Inter", sans-serif;
+  font-family: "Inter", fantasy, sans-serif;
   background-color: #2a2c2f;
   color: #fff;
 }
