--- a/blocks/places.css
+++ b/blocks/places.css
@@ -44,7 +44,7 @@
   cursor: pointer;
 }
 .places__gradient {
-  background: linear-gradient(to right, rgb(2, 120, 254), rgb(0, 58, 123));
+  background: linear-gradient(to right, #0278fe, #003a7b);
   height: 48px;
   width: 100%;
   display: flex;
@@ -61,11 +61,7 @@
   text-align: left;
 }
 .places__gradient:hover {
-  background: linear-gradient(
-    to right,
-    rgb(2, 120, 254, 0.25),
-    rgb(0, 58, 123, 0.25)
-  );
+  background: linear-gradient(to right, #0278fe40, #003a7b40);
   cursor: pointer;
 }
 .places__gradient_text {
