--- a/blocks/places.css
+++ b/blocks/places.css
@@ -44,7 +44,8 @@
   cursor: pointer;
 }
 .places__gradient {
-  background: linear-gradient(to right, #0278fe, #003a7b);
+  background: linear-gradient(90deg, #0278fe 0%, #003a7b 99.98%);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
   height: 48px;
   width: 100%;
   display: flex;
@@ -61,7 +62,11 @@
   text-align: left;
 }
 .places__gradient:hover {
-  background: linear-gradient(to right, #0278fe40, #003a7b40);
+  background: linear-gradient(
+    90deg,
+    rgba(2, 120, 254, 0.25) 0%,
+    rgba(0, 58, 123, 0.25) 99.98%
+  );
   cursor: pointer;
 }
 .places__gradient_text {
